exports[`test renders with props 1`] = `
<div>
<Connect(SplitContainerWithoutData)>
<Right mobile={false} classes={{...}}>
<ControllableWrapper autoCenter={true} markers={{...}} onMarkerHover={[Function]} hover={{...}} onChildClick={[Function]} />
</Right>
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Layout loading={false} LoadingComponent={[Function]} groups={{...}} count={2} tags={{...}} campuses={{...}} campusLocations={{...}} query="test" done={false} removeQueryString={[Function]} showTags={false} toggleTags={[Function]} showSearch={true} toggleSearch={[Function]} onCardHover={[Function]} />
</Left>
</div>
`;

exports[`test renders without map on mobile 1`] = `
<div>
<Connect(SplitContainerWithoutData)>
<Right mobile={false} classes={{...}} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Layout loading={false} LoadingComponent={[Function]} groups={{...}} count={2} tags={{...}} campuses={{...}} campusLocations={{...}} query="test" done={false} removeQueryString={[Function]} showTags={false} toggleTags={[Function]} showSearch={true} toggleSearch={[Function]} onCardHover={[Function]} />
</Left>
</div>
`;

exports[`test renders without map on server 1`] = `
<div>
<Connect(SplitContainerWithoutData)>
<Right mobile={false} classes={{...}} />
</Connect(SplitContainerWithoutData)>
<Left scroll={true} classes={{...}}>
<Layout loading={false} LoadingComponent={[Function]} groups={{...}} count={2} tags={{...}} campuses={{...}} campusLocations={{...}} query="test" done={false} removeQueryString={[Function]} showTags={false} toggleTags={[Function]} showSearch={true} toggleSearch={[Function]} onCardHover={[Function]} />
</Left>
</div>
`;
